<package>
  <name>orkobj_tonaoqi</name>
  <version>0.3.0</version>
  <description>Wrapper of ORK object recognition messages to NAOqi events</description>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>
  <license>BSD</license>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>object_recognition_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
